dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_1462915504.log
== SUBMISSION (2025-08-21 18:49:21)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2*tan(pi)/5))
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:45:35)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado // (2 * tan(pi)//5)
area = 5 // 2 * lado * apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-162.0
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-72.0
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-242.0
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-128.0
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-32.0
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-200.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:50:04)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2*tan(pi)/5))
area = 5/2*lado*apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:48:37)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2*tan(pi)/5))
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:44:27)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2 * tan(pi)/5)
area = 5 / 2 * lado * apotema
print(area)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:50:25)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2*tan(pi/5))
area = 5/2*lado*apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:48:45)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2*tan(pi)/5))
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado/(2*tan(pi)/5))
                                ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:47:22)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2 * tan(pi)/5)
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:45:09)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado // (2 * tan(pi)//5)
area = 5 / 2 * lado * apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-202.5
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-90.0
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-302.5
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-160.0
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-40.0
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-250.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:47:29)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2 * tan(pi)/5)
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:44:24)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2 * tan(pi)/5)
area = 5 / 2 * lado * apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:48:00)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2*tan(pi)/5)
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:47:39)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2 * tan(pi)/5)
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:50:18)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2*tan(pi/5))
area = 5/2*lado*apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:50:03)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2*tan(pi)/5))
area = 5/2*lado*apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2*tan(pi)/5))
                                  ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:47:30)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2 * tan(pi)/5)
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:47:33)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado/(2 * tan(pi)/5)
area = 5/2*lado*apotema
print(area)

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:44:30)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("qual o comprimento de um dos lados do pentagono?"))
apotema = lado / (2 * tan(pi)/5)
area = 5 / 2 * lado * apotema
print(area)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
qual o comprimento de um dos lados do pentagono?-4.1338449612775777e+18
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
qual o comprimento de um dos lados do pentagono?-1.8372644272344788e+18
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
qual o comprimento de um dos lados do pentagono?-6.175249880426999e+18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
qual o comprimento de um dos lados do pentagono?-3.266247870639074e+18
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
qual o comprimento de um dos lados do pentagono?-8.165619676597684e+17
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
qual o comprimento de um dos lados do pentagono?-5.103512297873552e+18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
